--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <ul class="we_do_section">
           <li class="we_do_section__item">
             <img
-              src="./images/img-копія-2.jpg"
+              src="./images/img-we_do-1.jpg"
               alt="робота з кодом на планшеті з клавіатурою"
               width="370"
             />
@@ -138,7 +138,7 @@
           </li>
           <li>
             <img
-              src="./images/img2.jpg "
+              src="./images/img-we_do-2.jpg "
               alt="робота з телефоними програмами на сірому комп`ютері"
               width="370"
             />
@@ -148,7 +148,7 @@
           </li>
           <li>
             <img
-              src="./images/img-копія.jpg"
+              src="./images/img-we_do-3.jpg"
               alt="робота на планшеті з кольористикою"
               width="370"
             />
@@ -166,7 +166,18 @@
         <h2>Наша команда</h2>
         <ul class="info_team">
           <li  class="info_team__team-section">
-            <img srcset="./images/img-igor@1x.jpg 1x, ./images/img-igor@2x.jpg 2x" src="./images/img.jpg" alt="Ігор Дем'яненко" width="270" />
+            <picture>
+              <source
+              srcset="./images/img-igor@1x_1200.jpg 1x, ./images/img-igor@2x_1200.jpg 2x" media="(min-width: 1200px)"
+              />
+              <source
+              srcset="./images/img-igor@1x_768.jpg 1x, ./images/img-igor@2x_768.jpg 2x" media="(min-width: 768px)"
+              />
+              <source
+              srcset="./images/img-igor@1x.jpg 1x, ./images/img-igor@2x.jpg 2x" media="(min-width: 320px)"
+              />
+            <img src="./images/img.jpg" alt="Ігор Дем'яненко" width="270" />
+          </picture>
             <div class="team">
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
@@ -200,10 +211,18 @@
         
           </li>
           <li class="info_team__team-section">
-            <img
-              srcset="./images/img-olga@1x.jpg 1x, ./images/img-olga@2x.jpg 2x" src="./images/img-копія-4.jpg"
-              alt="Ольга Рєпіна"
-              width="270"/>
+            <picture>
+              <source
+              srcset="./images/img-olga@1x_1200.jpg 1x, ./images/img-olga@2x_1200.jpg 2x" media="(min-width: 1200px)"
+              />
+              <source
+              srcset="./images/img-olga@1x_768.jpg 1x, ./images/img-olga@2x_768.jpg 2x" media="(min-width: 768px)"
+              />
+              <source
+              srcset="./images/img-olga@1x.jpg 1x, ./images/img-olga@2x.jpg 2x" media="(min-width: 320px)"
+              />
+           <img  src="./images/img-копія-4.jpg" alt="Ольга Рєпіна" width="270"/>
+          </picture>
               <div class="team">
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
@@ -236,11 +255,18 @@
           </div>
           </li>
           <li class="info_team__team-section">
-            <img
-            srcset="./images/img-nicola@1x.jpg 1x, ./images/img-nicola@2x.jpg 2x"
-              src="./images/img-копія-3.jpg"
-              alt="Микола Тарасов"
-              width="270"/>
+            <picture>
+              <source
+              srcset="./images/img-nicola@1x_1200.jpg 1x, ./images/img-nicola@2x_1200.jpg 2x" media="(min-width: 1200px)"
+              />
+              <source
+              srcset="./images/img-nicola@1x_768.jpg 1x, ./images/img-nicola@2x_768.jpg 2x" media="(min-width: 768px)"
+              />
+              <source
+              srcset="./images/img-nicola@1x.jpg 1x, ./images/img-nicola@2x.jpg 2x" media="(min-width: 320px)"
+              />
+        <img src="./images/img-копія-4.jpg" alt="Ольга Рєпіна" width="270"/>
+          </picture>
               <div class="team">
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
@@ -273,10 +299,18 @@
           </div>
           </li>
           <li class="info_team__team-section">
-            <img  srcset="./images/img-mykhailo@1x.jpg 1x, ./images/img-mykhailo@2x.jpg 2x"
-              src="./images/img-копія-5.jpg"
-              alt="Михайло Єрмаков"
-              width="270"
+            <picture>
+              <source
+              srcset="./images/img-mykhailo@1x_1200.jpg 1x, ./images/img-mykhailo@2x_1200.jpg 2x" media="(min-width: 1200px)"
+              />
+              <source
+              srcset="./images/img-mykhailo@1x_768.jpg 1x, ./images/img-mykhailo@2x_768.jpg 2x" media="(min-width: 768px)"
+              />
+              <source
+              srcset="./images/img-mykhailo@1x.jpg 1x, ./images/img-mykhailo@2x.jpg 2x" media="(min-width: 320px)"
+              />
+        <img   src="./images/img-копія-5.jpg" alt="Михайло Єрмаков" width="270"/>
+          </picture>             
             />
             <div class="team">
             <h3>Михайло Єрмаков</h3>
@@ -355,7 +389,7 @@
     </main>
     
   <footer class="basement">
-    <div class="footer-container">
+    <div class="container footer-container">
       <div class="footer-address">
      <a href="/"><span class="logo-web">Web</span>Studio</a>
         <address >
