--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <h2> Чим ми займаємося</h2>
         <ul class="we_do_section">
           <li class="we_do_section__item">
-            <img
+            <img srcset="./images/img-we_do-1.jpg 1x, ./images/img-we_do-1@2x.jpg 2x"
               src="./images/img-we_do-1.jpg"
               alt="робота з кодом на планшеті з клавіатурою"
               width="370"
@@ -137,7 +137,7 @@
             </div>
           </li>
           <li>
-            <img
+            <img srcset="./images/img-we_do-2.jpg 1x, ./images/img-we_do-2@2x.jpg 2x"
               src="./images/img-we_do-2.jpg "
               alt="робота з телефоними програмами на сірому комп`ютері"
               width="370"
@@ -147,7 +147,7 @@
             </div>
           </li>
           <li>
-            <img
+            <img srcset="./images/img-we_do-3.jpg 1x, ./images/img-we_do-3@2x.jpg 2x"
               src="./images/img-we_do-3.jpg"
               alt="робота на планшеті з кольористикою"
               width="370"
